<resources>
	<string name="app_name">Contena</string>
	
	<!--fragment_home_tab-->
	<string name="fragment_home_tab_title">로고 자리</string>
	
	<!--fragment_search_tab-->
	<string name="fragment_search_tab_search_hint">검색</string>
	<string name="fragment_search_tab_searching_text"><![CDATA[<b>\"%s\"</b> 검색 중…]]></string>
	<string name="fragment_search_tab_empty_result_text"><![CDATA[<b>\"%s\"</b> 검색 결과가 없습니다.]]></string>
	
	<!--widget_bottom_navigation_bar-->
	<string name="newItemTitle">신상품</string>
	<string name="searchTitle">쇼핑몰 검색</string>
	
	<!--widget_new_products_summary_view-->
	<string name="widget_new_products_summary_view_more_item_format">+%d</string>
	
	<!--item_post-->
	<string name="emptyItem">구독하신 쇼핑몰에\n신상품 포스트가 없습니다.</string>
	<string name="noMoreItem">더 이상 이전 포스트가 존재 하지 않습니다.</string>
	<string name="goToSubscription">구독하러 가기</string>
	<string name="item_post_go_total_new_product">전체상품 보러가기</string>
	
	<!--item_searched_shop-->
	<string name="shop_subscribe">구독</string>
	<string name="shop_unsubscribe">구독 해제</string>
	<string name="shop_subscriber_count">구독자: %d명</string>
	
	<!--activity_post_detail-->
	<string name="activity_post_detail_title">%s 신상품</string>
	
	<!--activity_settings-->
	<string name="activity_settings_title">설정</string>
	<string name="activity_settings_use_alarm">알림 설정</string>
	<string name="activity_settings_use_internet_viewer">신상품 인터넷으로 보기</string>
	<string name="activity_settings_go_shop_manage">구독 쇼핑몰 관리</string>
	<string name="activity_settings_go_app_evaluation">앱 평가하기</string>
	<string name="activity_settings_send_mail">개발자에게 메일 보내기</string>
	<string name="activity_settings_share_app">앱 공유하기</string>
	
	<!--activity_shop_manage-->
	<string name="activity_shop_manage_title">구독 쇼핑몰 관리</string>
	
	<!--fcm_notification-->
	<string name="fcm_notification_default_title">구독한 쇼핑몰에 신상품 업데이트</string>
	<string name="fcm_notification_default_body">오늘의 신상품을 확인하러 오세요.</string>

</resources>
