<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".presenter.settings.SettingsActivity">
	
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
		
		<com.google.android.material.appbar.AppBarLayout
			android:id="@+id/appBar"
			android:layout_width="0dp"
			android:layout_height="?android:actionBarSize"
			android:background="@color/colorWhite"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">
			
			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">
				
				<ImageView
					android:id="@+id/backButton"
					android:layout_width="24dp"
					android:layout_height="24dp"
					android:layout_marginStart="12dp"
					android:background="?android:selectableItemBackgroundBorderless"
					android:src="@drawable/vector_arrow_back_gray900"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:ignore="ContentDescription" />
				
				<TextView
					android:id="@+id/titleTextView"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:text="@string/activity_settings_title"
					android:textSize="16dp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toEndOf="@id/backButton"
					app:layout_constraintTop_toTopOf="parent"
					tools:ignore="SpUsage" />
			
			</androidx.constraintlayout.widget.ConstraintLayout>
		</com.google.android.material.appbar.AppBarLayout>
		
		<ScrollView
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:background="@color/colorGray100"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/appBar">
			
			<LinearLayout
				android:id="@+id/settingsContainer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/colorWhite"
				android:divider="@drawable/shape_vertical_common_border"
				android:orientation="vertical"
				android:showDividers="middle|end">
				
				<TextView
					android:id="@+id/goShopManageButton"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="?android:selectableItemBackground"
					android:clickable="true"
					android:focusable="true"
					android:gravity="center_vertical"
					android:minHeight="48dp"
					android:paddingStart="12dp"
					android:paddingEnd="12dp"
					android:text="@string/activity_settings_go_shop_manage"
					android:textSize="16sp" />
				
				<com.sabgil.contena.presenter.widget.SwitchTextView
					android:id="@+id/useAlarmButton"
					android:layout_width="match_parent"
					android:layout_height="48dp"
					android:background="?android:selectableItemBackground"
					android:clickable="true"
					android:focusable="true"
					app:switchOn="true"
					app:switchText="@string/activity_settings_use_alarm"
					app:switchTextSize="16sp" />
				
				<com.sabgil.contena.presenter.widget.SwitchTextView
					android:id="@+id/useInternetViewerButton"
					android:layout_width="match_parent"
					android:layout_height="48dp"
					android:background="?android:selectableItemBackground"
					android:clickable="true"
					android:focusable="true"
					app:switchOn="false"
					app:switchText="@string/activity_settings_use_internet_viewer"
					app:switchTextSize="16sp" />
				
				<View
					android:layout_width="match_parent"
					android:layout_height="24dp"
					android:background="@color/colorGray100" />
				
				<TextView
					android:id="@+id/goAppEvaluationButton"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="?android:selectableItemBackground"
					android:clickable="true"
					android:focusable="true"
					android:gravity="center_vertical"
					android:minHeight="48dp"
					android:paddingStart="12dp"
					android:paddingEnd="12dp"
					android:text="@string/activity_settings_go_app_evaluation"
					android:textSize="16sp" />
				
				<TextView
					android:id="@+id/sendMailButton"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="?android:selectableItemBackground"
					android:clickable="true"
					android:focusable="true"
					android:gravity="center_vertical"
					android:minHeight="48dp"
					android:paddingStart="12dp"
					android:paddingEnd="12dp"
					android:text="@string/activity_settings_send_mail"
					android:textSize="16sp" />
				
				<TextView
					android:id="@+id/shareAppButton"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="?android:selectableItemBackground"
					android:clickable="true"
					android:focusable="true"
					android:gravity="center_vertical"
					android:minHeight="48dp"
					android:paddingStart="12dp"
					android:paddingEnd="12dp"
					android:text="@string/activity_settings_share_app"
					android:textSize="16sp" />
			</LinearLayout>
		</ScrollView>
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
